# f3_blink

./: .gitignore  CMakeLists.txt  README.md  STM32F303RETx_FLASH.ld  STM32F303xE.cmake  f3_blink.ioc  run.jdebug
Drivers/CMSIS/Device/ST/STM32F3xx/Source/Templates/gcc/: startup_stm32f303xe.s
Inc/: mxconstants.h  stm32f3xx_hal_conf.h  stm32f3xx_it.h
Src/: main.c  stm32f3xx_hal_msp.c  stm32f3xx_it.c
